# postech-ml-techchallenge-fase-1-airflow

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: bookstoscrape.py  run_api_web_scraping.py
data/: books.csv
docs/: README.md
notebooks/: airflow_docker.ipynb  postgresql.ipynb  setup.ipynb
